# bdm2016

./: .gitignore  CMakeLists.txt  capture.py  capture.sh  fillOcclusion.cpp  lookat.cpp  loop.sh  main.cpp  makeQmatrix.cpp  marylib.hpp  nohup.out  projectImagefromXYZ.cpp  setup.sh  stereoTest.cpp  upload.bat  upload.sh
calibration/: CMakeLists.txt  calib  calib.hpp  camcalib.cpp  camera_data.xml  default.xml  main.cpp  mystereocalib.txt  stereocalib.cpp
on_machine/: capture.py  capture_sphere.py  capture_test.py  depth_test.py  depth_test_while.py  i2c_test.py  led_test.py  nohup.out  search.py  servo_phi.py  servo_theta.py
on_machine/server/: ras_server.js
on_machine/server/content/: index.html  socketfunc.js
perspective/: main.py
recognition/: dummy_wall.py  recog_2D.py  recog_3D.py  recognition.py  search.py  wall_analysis.py
recognition/data/: search.log.example
recognition/tips/: deg2xyz.py  recog_3D.py
visualize/: animation_color.cpp  compile.sh  index.html  main.js
visualize/projection/: script.js  webgl_test.html
visualize/three/: ]  accel.html  around_view.html  around_view.js  index.html  main.js  mirror.html  touch_view.html  touch_view.js  trans_view.html  trans_view.js  video_test.html  video_test.js  webrtc.html  webrtctest.js
visualize/webgl/: script.js  webgl_test.html
web/three_test/: three.html
